--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <section>
         <h3>Box 1</h3>
         <p class="box-descriptions">How to use this box to search by ingredient.</p>
-        <p>Link to recipes wireframe: <a href="https://barbaralois.github.io/First-Capstone/recipes">Here</a></p>
+        <p class="box-descriptions">View recipes wireframe in a new tab: <a href="https://barbaralois.github.io/First-Capstone/recipes" target="_blank">Here</a></p>
         <form>
           <fieldset class="by-ingredient">
             <label for="ingredient">Ingredient:</label>
@@ -29,7 +29,7 @@
       <section>
         <h3>Box 2</h3>
         <p class="box-descriptions">How to use this box to find random recipes.</p>
-        <p>Link to random recipes wireframe (same as box 1 wireframe): <a href="https://barbaralois.github.io/First-Capstone/recipes">Here</a></p>
+        <p class="box-descriptions">View random recipes wireframe (same as box 1 wireframe) in a new tab: <a href="https://barbaralois.github.io/First-Capstone/recipes" target="_blank">Here</a></p>
         <form>
           <fieldset class="all-random">
             <label for="max-random">Load</label>
@@ -41,7 +41,7 @@
       <section>
         <h3>Box 3</h3>
         <p class="box-descriptions">How to use this box to search nearby restaurants.</p>
-        <p>Link to restaurants wireframe: <a href="https://barbaralois.github.io/First-Capstone/restaurants">Here</a></p>
+        <p class="box-descriptions">View restaurants wireframe in a new tab: <a href="https://barbaralois.github.io/First-Capstone/restaurants" target="_blank">Here</a></p>
         <form>
           <fieldset class="by-restaurant">
             <label for="address">Address:</label>
