--- a/restaurants.html
+++ b/restaurants.html
@@ -10,7 +10,7 @@
     <header>
       <h1 class="site-title">Title</h1>
       <h2 class="site-desc">Short description of how to utilize the results</h2>
-      <button type="button" alt="Reset the app and return to the first page">Start Over</button>
+      <a href="https://barbaralois.github.io/First-Capstone/"><button type="button" alt="Reset the app and return to the first page">Start Over</button></a>
     </header>
     <main id="restaurants">
       <section class="restaurant-info">
