--- a/index.html
+++ b/index.html
@@ -12,21 +12,21 @@
       <h2 class="site-desc">Basic description and instructions on how to use the site.</h2>
     </header>
     <main>
-      <section>
+      <section class="landing-box">
         <h3>Box 1</h3>
         <p class="box-descriptions">How to use this box to search by ingredient.</p>
         <p class="box-descriptions">View recipes wireframe in a new tab: <a href="https://barbaralois.github.io/First-Capstone/recipes" target="_blank">Here</a></p>
         <form>
           <fieldset class="by-ingredient">
             <label for="ingredient">Ingredient:</label>
-            <input type="text" id="ingredient" placeholder="Beef, corn, milk, etc."><br>
+            <input type="text" id="ingredient" placeholder="Beef, corn, milk, etc." size=4><br>
             <label for="max-results">Load</label>
             <input type="text" id="max-results" value="10" size=1 class="max-return"> recipes<br>
             <input value="Go!" type="submit" class="submit-button">
           </fieldset>
         </form>
       </section>
-      <section>
+      <section class="landing-box">
         <h3>Box 2</h3>
         <p class="box-descriptions">How to use this box to find random recipes.</p>
         <p class="box-descriptions">View random recipes wireframe (same as box 1 wireframe) in a new tab: <a href="https://barbaralois.github.io/First-Capstone/recipes" target="_blank">Here</a></p>
@@ -38,7 +38,7 @@
           </fieldset>
         </form>
       </section>
-      <section>
+      <section class="landing-box">
         <h3>Box 3</h3>
         <p class="box-descriptions">How to use this box to search nearby restaurants.</p>
         <p class="box-descriptions">View restaurants wireframe in a new tab: <a href="https://barbaralois.github.io/First-Capstone/restaurants" target="_blank">Here</a></p>
