--- a/index.html
+++ b/index.html
@@ -28,19 +28,17 @@
         </form>
       </section>
       <section class="landing-box">
-        <h3>Random Recipes</h3>
-        <p class="box-descriptions">Feeling adventurous or not sure where to start? Take a look at some random recipes to get the inspiration flowing and figure out what you want to make tonight. Enter how many recipes you’d like to see below, and click go!</p>
+        <h3>Random Recipe</h3>
+        <p class="box-descriptions">Feeling adventurous or not sure where to start? Take a look at a random recipe to get the inspiration flowing and to help you figure out what you want to make tonight. All you have to do is click go!</p>
         <form id="random-search">
           <fieldset>
-            <label for="max-random">Load</label>
-            <input type="number" id="max-random" value="10" max="10" min="1" size=1 class="max-return"> recipes<br>
             <input value="Go!" type="submit" class="submit-button">
           </fieldset>
         </form>
       </section>
       <section class="landing-box">
         <h3>Find a Restaurant</h3>
-        <p class="box-descriptions">Don’t love the idea of standing over the stove tonight? Traveling? Avoiding dishes at all costs? Whatever the reason, you can enter your address and how many restaurants you’d like to see and click go to get some nearby restaurant suggestions. Maybe you’ll find a new favorite!</p>
+        <p class="box-descriptions">Don’t feel like standing over the stove? Traveling? Hate doing the dishes? Whatever the reason, enter your address and how many restaurants you’d like to see and click go to get some nearby suggestions. Maybe you’ll find a new favorite!</p>
         <form id="restaurant-search">
           <fieldset>
             <label for="address">Address:</label>
