--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
       <h1 class="site-title">What's For Dinner?</h1>
       <h2 class="site-desc">Welcome to What's For Dinner! Here you can search recipes by ingredient, get a list of random recipes, or find nearby restaurants. What's For Dinner will help you find some fresh answers to this age old question, whether you feel like cooking or not. Bon appétit!</h2>
       <a href="https://barbaralois.github.io/First-Capstone/"><button type="button" alt="Reset the app and return to the first page" class="hidden">Start Over</button></a>
+      <section id="recipe-instructions" class="hidden">
+        <p>On this screen you'll see the recipe name, number of servings, and ingredients so you can eyeball whether or not it's something that fits your needs. For specific cooking instructions, click on the recipe name to open the original recipe in a new tab.</p>
+      </section>
+      <section id="random-instructions" class="hidden">
+        <p>On this screen you'll see the recipe name, cuisine type, and ingredients so you can eyeball whether or not it's something that fits your needs. For specific cooking instructions, click on the recipe name to open the original recipe in a new tab.</p>
+      </section>
     </header>
     <main>
       <section class="landing-box">
@@ -29,22 +35,20 @@
       </section>
       <section class="landing-box">
         <h3>Random Recipe</h3>
-        <p class="box-descriptions">Feeling adventurous or not sure where to start? Take a look at a random recipe to get the inspiration flowing and to help you figure out what you want to make tonight. All you have to do is click go!</p>
+        <p class="box-descriptions">Feeling adventurous or not sure where to start? Take a look at 10 random recipes to get the inspiration flowing and to help you figure out what you want to make tonight. All you have to do is click go!</p>
         <form id="random-search">
           <fieldset>
             <input value="Go!" type="submit" class="submit-button">
-          </fieldset>
+          </fieldset>          
         </form>
       </section>
       <section class="landing-box">
         <h3>Find a Restaurant</h3>
-        <p class="box-descriptions">Don’t feel like standing over the stove? Traveling? Hate doing the dishes? Whatever the reason, enter your address and how many restaurants you’d like to see and click go to get some nearby suggestions. Maybe you’ll find a new favorite!</p>
+        <p class="box-descriptions">Don’t feel like standing over the stove? Traveling? Hate doing the dishes? Whatever the reason, enter your address and click go to get up to 10 local suggestions. Maybe you’ll find a new favorite!</p>
         <form id="restaurant-search">
           <fieldset>
             <label for="address">Address:</label>
             <input type="text" id="address" placeholder="1234 Main St"><br>
-            <label for="max-restaurants">Load</label>
-            <input type="number" id="max-restaurants" value="10" max="15" min="1" size=1 class="max-return"> restaurants<br>
             <input value="Go!" type="submit" class="submit-button">
           </fieldset>
         </form>
