bug fix - compounding ingredients with edamam API

--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
           </fieldset>
         </form>
       </section>
+    <a href="https://barbaralois.github.io/First-Capstone/"><button type="button" alt="Reset the app and return to the first page" class="hidden">Start Over</button></a>
     </main>
     <script src="script.js"></script>
   </body>
