--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <section id="random-instructions" class="hidden">
         <p>On this screen you'll see the recipe name, cuisine type, and ingredients so you can eyeball whether or not it's something that fits your needs. For specific cooking instructions, click on the recipe name to open the original recipe in a new tab.</p>
       </section>
-      <a href="https://barbaralois.github.io/First-Capstone/"><button type="button" alt="Reset the app and return to the first page" class="hidden start-over">Start Over</button></a>
+      <a href="https://barbaralois.github.io/Whats-For-Dinner/"><button type="button" alt="Reset the app and return to the first page" class="hidden start-over">Start Over</button></a>
     </header>
     <main>
       <section class="landing-box">
